best-practices-vpol/require-drop-all/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: drop-all-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: ValidatingPolicy
    name: drop-all-capabilities
  images: [gcr.io/google-samples/node-hello:1.0]
  matchConditions:
  - name: exact-resource
    expression: object.kind == 'Pod' && object.metadata.namespace == 'default' && (object.metadata.name in ['exception-drop-all', 'exception-drop-all-positive'])
