best-practices-vpol/require-drop-all/require-drop-all.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: drop-all-capabilities
  annotations:
    policies.kyverno.io/title: Drop All Capabilities in VPOL
    policies.kyverno.io/category: Best Practices in VPOL
    policies.kyverno.io/severity: medium
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/minversion: 1.17.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Capabilities permit privileged actions without giving full root access. All
      capabilities should be dropped from a Pod, with only those required added back.
      This policy ensures that all containers explicitly specify the `drop: ["ALL"]`
      ability. Note that this policy also illustrates how to cover drop entries in any
      case although this may not strictly conform to the Pod Security Standards.
spec:
  validationActions: [Audit]
  evaluation: 
     background: 
           enabled: true
  matchConstraints:
        resourceRules:
          - apiGroups: ['']
            apiVersions: [v1]
            operations: [CREATE, UPDATE]
            resources: [pods]
  variables:
            - name: allContainers
              expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
  validations:
            - expression: >-
                variables.allContainers.all(container, 
                container.?securityContext.?capabilities.?drop.orValue([]).exists(capability, capability.upperAscii() == 'ALL'))
              message: "Containers must drop `ALL` capabilities."
